<resources>
    <string name="app_name">Geofencing</string>
    <string name="Email">Email</string>
    <string name="Login">Login</string>
    <string name="AddPatient">Add Patient</string>
    <string name="Password">Password</string>
    <string name="FullName">Enter Full Name</string>
    <string name="Number">Enter Mobile Number</string>
    <string name="todo">TODO</string>
    <string name="new_patient">New Patient</string>
    <string name="Logout">logout</string>
    <string name="welcome">Welcome</string>
    <string name="full_name">Full Name</string>
    <string name="msg_subscribed">subscribed</string>
    <string name="msg_subscribe_failed">subscription failed!!!</string>
    <string-array name="spinnerList">
        <item>Select Address</item>
        <item>Address1</item>
        <item>Address2</item>
        <item>Address3</item>
    </string-array>

</resources>